--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
 OPENAI_API_KEY=<your-openai-api-key>
-BOOKING_APP_URL=http://localhost:3000/book
+BOOKING_APP_URL=http://localhost:8501/book
 CHECK_INTERVAL_SECONDS=10
 RETRY_INTERVAL_SECONDS=60
+PAYMAN_API_KEY=<your-payman-api-key>
